--- a/package.yaml
+++ b/package.yaml
@@ -1,18 +1,18 @@
 name:                gramhs
 version:             1.0.2
-github:              "Alias Qli/GramHs"
+github:              "AliasQli/GramHs"
 license:             BSD3
 author:              "Alias Qli"
 maintainer:          "2576814881@qq.com"
 copyright:           "2021 Alias Qli"
 
 # Metadata used when publishing your package
-synopsis:            A GUI for Mirai. A possible substitute for Linux QQ.
+synopsis:            A GUI for Mirai. A substitute for Linux QQ.
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/Alias Qli/GramHs#readme>
+description:         Please see the README on GitHub at <https://github.com/AliasQli/GramHs#readme>
 
 dependencies:
 - base
